# head_mover_issue

bitbots_motion/bitbots_dynup/: CMakeLists.txt  package.xml
bitbots_motion/bitbots_dynup/include/bitbots_dynup/: dynup_node.hpp
bitbots_motion/bitbots_dynup/launch/: dynup.launch  dynup_standalone.launch  test.launch
bitbots_motion/bitbots_dynup/src/: dynup_node.cpp  dynup_pywrapper.cpp
bitbots_motion/bitbots_head_mover/: CMakeLists.txt  package.xml
bitbots_motion/bitbots_head_mover/launch/: head_mover.launch
bitbots_motion/bitbots_head_mover/src/: move_head.cpp
bitbots_motion/bitbots_quintic_walk/: CMakeLists.txt  package.xml
bitbots_motion/bitbots_quintic_walk/include/bitbots_quintic_walk/: walk_node.hpp
bitbots_motion/bitbots_quintic_walk/launch/: quintic_walk.launch  quintic_walk_standalone.launch
bitbots_motion/bitbots_quintic_walk/src/: walk_node.cpp  walk_pywrapper.cpp
